--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "cryptr": "^6.0.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
