--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.0",
     "cookie-parser": "~1.4.4",
@@ -26,6 +27,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
