--- a/balloon-frontend/package.json
+++ b/balloon-frontend/package.json
@@ -10,10 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.12",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^3.2.4",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
