--- a/balloon-frontend/package.json
+++ b/balloon-frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
+    "vue-qrcode-reader": "^3.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
