--- a/balloon-frontend/package.json
+++ b/balloon-frontend/package.json
@@ -13,8 +13,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "file-saver": "^2.0.5",
+    "qrcode": "^1.4.4",
+    "qrcode.vue": "^3.2.2",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
+    "vue-qrcode": "^0.4.0",
     "vue-qrcode-reader": "^3.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2",
