--- a/balloon-frontend/package.json
+++ b/balloon-frontend/package.json
@@ -10,11 +10,20 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
+    "adm-zip": "^0.5.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "canvas": "^2.7.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.6.0",
+    "original-fs": "^1.1.0",
+    "qrcode": "^1.4.4",
+    "qrcode.vue": "^3.2.2",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
+    "vue-qrcode": "^0.4.0",
     "vue-qrcode-reader": "^3.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2",
