--- a/balloon-frontend/package.json
+++ b/balloon-frontend/package.json
@@ -27,6 +27,7 @@
     "vue-qrcode-reader": "^3.0.0",
     "vue-router": "^3.0.1",
     "vuejs-loading-screen": "^1.0.9",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
